a few fixes to AUCs figure

--- a/notebooks/box_plots.ipynb
+++ b/notebooks/box_plots.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,8 +22,8 @@
     "import wandb\n",
     "\n",
     "dataset_match = {\n",
-    "    \"cobre\": \"COBRE ICA\",\n",
-    "    \"abide\": \"ABIDE1 ICA\",\n",
+    "    \"cobre\": \"COBRE\",\n",
+    "    \"abide\": \"ABIDE\",\n",
     "    \"synth1\": \"Synthetic1\",\n",
     "    \"synth2\": \"Synthetic2\",\n",
     "}\n",
